# QtFfplayer

./: CMakeLists.txt  QtFfplayer.sln  README.md
QtFfplayer/: CAudioFrameCast.cpp  CAudioFrameCast.h  CConfig.cpp  CConfig.h  CSelCodec.cpp  CSelCodec.h  HDRMetadataParser.h  QCustomSlider.cpp  QCustomSlider.h  QProgressSlider.cpp  QProgressSlider.h  QtClockAction.cpp  QtClockAction.h  QtFfplayer.cpp  QtFfplayer.h  QtFfplayer.qrc  QtFfplayer.vcxproj  QtFfplayer.vcxproj.filters  QtGLVideoWidget.cpp  QtGLVideoWidget.h  QtNoFocusBorderItemDelegate.cpp  QtNoFocusBorderItemDelegate.h  QtOpenUrlDlg.cpp  QtOpenUrlDlg.h  QtPlayList.cpp  QtPlayList.h  QtPlayListModel.cpp  QtPlayListModel.h  define_type.h  ffplay.cpp  ffplay.h  main.cpp
QtFfplayer/shaders/: yuv_core.frag  yuv_core.vert
glm/core/: dummy.cpp  func_common.hpp  func_common.inl  func_integer.hpp  type_half.inl
lib/: SoundTouchDLL_x64.lib
